# diarilog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  wrangler.toml
.cargo/: config.toml.wasm
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
docs/: hydration-verification.md  i18n-review-flow.md  local-development.md
docs/deployment/: README.md  deploy-order.md  feature-flags.md  initial-setup.md  multi-env.md  observability.md  oidc-providers.md  prerequisites.md  rollback.md
hydrate/: Cargo.toml
hydrate/.cargo/: config.toml
hydrate/src/: lib.rs
migrations/: 0001_initial.sql  0002_e2ee_key_model.sql  0003_diary_versions.sql
rfcs/: 001-rfc-process.md  003-reviewed-false-ui-markers.md  004-language-switcher.md  005-translation-review-criteria.md  006-rtl-layout-arabic-font.md  007-data-export-import.md  009-offline-pwa.md  010-emergency-erase-ui.md  011-e2ee-boundary-and-key-model.md  012-entry-versioning.md  README.md
rfcs/done/: 001-rfc-process.md  002-rename-to-diarilog.md  008-cicd-github-actions.md
scripts/: build-bff-hydrate.sh
src/: auth.rs  lib.rs
src/dialog/: ai_client.rs  mod.rs  prompts.rs  session.rs
src/handlers/: auth.rs  dashboard.rs  dialog.rs  diary.rs  erase.rs  identity.rs  mod.rs  safety.rs
src/safety/: ai_client.rs  classifier.rs  mod.rs
src/ssr/: handlers.rs  layout.rs  mod.rs
src/storage/: diary.rs  identity.rs  mod.rs  triggers.rs
